<resources>
    <string name="app_name">MCMix</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="conversation_default_message">Enter your message here&#8230;</string>
    <string name="conversation_send_button_message">Send</string>
    <string name="Bad_Character_Toast">Only ascii values are currently supported. Please try again.</string>
    <string name="Long_Message_Toast">This message is too long for a single communication. Sending in pieces which will take more time&#8230;</string>
    <string name="dial_buddy_toast">Dialing. It may take a few minutes to complete.</string>

    <string name="buddy_list_title_text">Buddies</string>
    <string name="active_conversation_hint">Active</string>
    <string name="inactive_conversation_hint">Inactive</string>
    <string name="hang_up_text">Hang up</string>
    <!-- Strings related to home activity -->
    <string name="add_buddy_button_text">Add Buddy</string>
    <string name="start_conversation_button_text">Start Conversation</string>
    <string name="stop_conversation_button_text">Hang up</string>
    <string name="dial_buddy_button_text">Dial Buddy</string>
    <string name="start_conversation_with_last_dial_button_text">Start Conversation With Incoming Dialer</string>
    <string name="start_conversation_with_outgoing_dial_button_text">Start Conversation With Dialed Buddy</string>
    <string name="block_incoming_dials_button_text">Block incoming dials</string>
    <string name="allow_incoming_dials_button_text">Allow incoming dials</string>

    <!-- Strings related to user creation -->
    <string name="user_creation_password_repeat_hint">Password again...</string>
    <string name="user_creation_button">Create User</string>
    <string name="user_creation_banner_text">Account Creation</string>
    <string name="user_creation_hint_text"> The username must be no longer than 8 characters and use only letters and numbers.</string>

    <!-- Strings related to login -->
    <string name="login_button">Log in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_banner_text">Login</string>

    <!-- Strings related to updating keys -->
    <string name="update_all_keys_button">Update all keys</string>
    <string name="update_one_user_button">Add or update this user\'s key</string>

</resources>
