<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ac.panoramix.uoe.xyz.UI_Handling.UpdateKeysActivity">

    <EditText
        android:id="@+id/update_key_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/update_key_all_users_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/update_key_one_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_one_user_button"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/update_key_username_input"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/update_key_all_users_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_all_keys_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
