<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="ac.panoramix.uoe.mcmix.UserInterface.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/buddy_list_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="start"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:layout_editor_absoluteX="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/conversation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_gravity="start"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_vertical"
                android:text="@string/app_name"
                style="@style/TextAppearance.AppCompat.Title"/>



        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/login_banner"
        android:textSize="35dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/login_username"
        android:text="@string/username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"

        android:maxLines="1"
        android:layout_marginTop="16dp"
/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="16dp"
/>
</LinearLayout>
