<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ac.panoramix.uoe.mcmix.UI_Handling.BuddyListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/buddy_list_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:layout_gravity="start"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:layout_editor_absoluteX="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/conversation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_gravity="start"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:padding="16dp"
            >

                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/app_name"
                    style="@style/TextAppearance.AppCompat.Title"/>


                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:id="@+id/buddy_list_title"
                    android:layout_gravity="center|center_vertical"
                    android:text="@string/buddy_list_title_text"
                    android:layout_height="match_parent"
                    android:textAlignment="center"/>

                <ImageButton
                    android:id="@+id/add_buddy_button"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|center_vertical"
                    android:contentDescription="@string/add_buddy_button_text"
                    app:srcCompat="@android:drawable/ic_menu_add"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ListView
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="10"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/buddy_list_list_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="4dp"
        android:divider="@null"
        android:dividerHeight="2dp"
        app:layout_constraintTop_toBottomOf="@+id/buddy_list_toolbar_layout"
        android:layout_marginTop="16dp"/>



</android.support.constraint.ConstraintLayout>
