<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/conversation_toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="left"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       >

        <android.support.v7.widget.Toolbar
            android:id="@+id/conversation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_gravity="left"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStartWithNavigation="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_ab_back_holo_light_am"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    style="@style/TextAppearance.AppCompat.Title"/>


                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="0dp"
                    android:id="@+id/toolbar_active_conversation"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textAlignment="center"/>

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:id="@+id/toolbar_buddy_name"
                    android:layout_width="0dp"
                    android:textAlignment="viewEnd"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="418dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/conversation_history_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="4dp"
        android:divider="@null"
        android:dividerHeight="2dp"
        app:layout_constraintTop_toBottomOf="@+id/conversation_toolbar_layout"
        android:layout_marginTop="16dp"/>

    <View style="@style/Divider"
          android:id="@+id/conversation_divider"
          app:layout_constraintTop_toBottomOf="@+id/conversation_history_view"
          android:layout_height="0dp"
          android:layout_width="0dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"/>

    <ViewSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conversation_dial_or_type_switcher"
        app:layout_constraintTop_toBottomOf="@+id/conversation_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="13dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/send_message_view">

            <EditText
                android:id="@+id/conversation_message_input"
                android:layout_width="271dp"
                android:layout_height="74dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/conversation_default_message"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                tools:layout_editor_absoluteX="9dp"/>
            <Button
                android:id="@+id/conversation_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conversation_send_button_message"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                tools:layout_editor_absoluteX="288dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dial_bob_view" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/start_conversation_button"
                android:text="@string/start_conversation_button_text"/>
        </LinearLayout>

    </ViewSwitcher>
</android.support.constraint.ConstraintLayout>
